--- a/movie-catalog-service/src/main/resources/application.properties
+++ b/movie-catalog-service/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+
+#ds.srvhost=localhost
+spring.application.name=movie-catalog-service
 server.port=10090
+management.endpoints.web.exposure.include=*
+
+# eureka settings
+eureka.instance.leaseRenewalIntervalInSeconds=1
+eureka.client.registryFetchIntervalSeconds=1
+ribbon.ServerListRefreshInterval=1000
+eureka.instance.preferIpAddress=true
+# Custom properties
+ds.movie.info.service.name=movie-info-service
+ds.movie.ratings.service.name=movie-ratings-service
