--- a/movie-info-service/src/main/resources/application.properties
+++ b/movie-info-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=movie-info-service
 server.port=10091
+management.endpoints.web.exposure.include=*
+# eureka settings
+eureka.instance.leaseRenewalIntervalInSeconds=1
+eureka.client.registryFetchIntervalSeconds=1
+ribbon.ServerListRefreshInterval=1000
+eureka.instance.preferIpAddress=true
