--- a/movie-ratings-service/src/main/resources/application.properties
+++ b/movie-ratings-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+
+spring.application.name=movie-ratings-service
 server.port=10092
+management.endpoints.web.exposure.include=*
+# eureka settings
+eureka.instance.preferIpAddress=true
+eureka.instance.leaseRenewalIntervalInSeconds=1
+eureka.client.registryFetchIntervalSeconds=1
+ribbon.ServerListRefreshInterval=1000
